# spectra

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_UPDATES.md  FAQ.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PHASE4_GUIDE.md  README.md  build-release.bat  launch-vision.bat  launch-vision.sh  package-lock.json  run-agent.bat  run-server.bat  test-all.bat  test-new-stuff.bat  test-time-travel.ps1  test-time-travel.sh  validate-refactor.bat
.claude/: settings.local.json
.github/workflows/: frontend-ci.yml  rust-ci.yml
app/: README.md  launch-spectra-vision.bat  launch-spectra-vision.sh  package-lock.json  package.json  tsconfig.json
app/src/: App.css  App.tsx  ErrorBoundary.tsx  TimeSlider.tsx  VelocityCard.tsx  api.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/components/: RiskTreemap.tsx  SunburstChart.tsx
app/src/components/__tests__/: RiskTreemap.test.tsx
cli/: Cargo.toml  USAGE.md  test-analyze.bat  test-analyze.sh  test-basic.bat  test-basic.sh
cli/src/: main.rs  watch.rs
cli/src/analysis/: entropy.rs  heuristics.rs  mod.rs  outliers.rs  semantic.rs
cli/src/governance/: engine.rs  mod.rs  tests.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  FAQ.md  PHASE3_GUIDE.md  PHASE4_GUIDE.md  ROADMAP.md  TIME_TRAVEL_ANALYTICS.md  WHATS_NEW_v0.5.0.md  WHATS_NEW_v0.6.0.md
server/: Cargo.toml
server/src/: main.rs
spectra-core/: Cargo.toml  README.md
spectra-core/src/: cache.rs  lib.rs  models.rs  path_pool.rs  scanner.rs  stats.rs  transport.rs
