[package]
name = "spectra-cli"
description = "S.P.E.C.T.R.A: Scalable Platform for Enterprise Content Topology & Resource Analytics"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[dependencies]
jwalk = "0.8"        # The parallel walker (Speed)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"   # The data format
anyhow = "1.0"       # Error handling
clap = { version = "4.4", features = ["derive"] } # CLI parsing
humansize = "2.0"    # Readable units