[package]
name = "spectra-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Spectra Contributors"]
description = "Federation hub and control plane for Spectra"
repository = "https://github.com/saworbit/spectra"
keywords = ["federation", "server", "governance", "analytics"]
categories = ["web-programming::http-server"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
surrealdb = { version = "1.0", features = ["kv-mem"] } # In-memory for dev, kv-rocksdb for prod
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors"] } # For GUI access
