[package]
name = "spectra-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Spectra Contributors"]
description = "Core scanning library for the Spectra platform"
repository = "https://github.com/saworbit/spectra"
keywords = ["filesystem", "scanner", "analytics", "enterprise"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
jwalk = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
