[package]
name = "spectra-core"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Spectra Contributors"]
description = "Core scanning library for the Spectra platform"
repository = "https://github.com/saworbit/spectra"
keywords = ["filesystem", "scanner", "analytics", "enterprise"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
jwalk = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sysinfo = "0.32"

[dev-dependencies]
tempfile = "3.8"
